@@ -1,3 +1,6 @@
+2012-02-19:
+ * oprava parametru streamu, thenx to perso...@alanellis.co.uk
+
 2012-02-17:
  * oprava parametru streamu, filtrace aktualne nespustitelnych poradu
 
